fix hover effects on mobile

--- a/app/scss/layout/_navigation.scss
+++ b/app/scss/layout/_navigation.scss
@@ -74,22 +74,25 @@
     font-weight: 700;
     color: $clr-neutral-dark-blue;
     position: relative;
-  
+
     &::before {
       content: '';
       position: absolute;
       display: block;
       width: 100%;
-      height: 6px;
-      bottom: -47px;
+      height: 3px;
+      bottom: -6px;
       left: 0;
       background-color: $clr-primary-orange;
       transform: scaleX(0);
       transition: transform 0.3s ease;
+      @include media-query(large) {
+        bottom: -47px;
+        height: 6px;
+      }
     }
     &:hover::before {
       transform: scaleX(1);
-      
     }
   }
   &__avatar-container {
